--- a/about/bookmarks/index.html
+++ b/about/bookmarks/index.html
@@ -67,28 +67,29 @@
      
      <hr>
     <p>  A small library of various bookmarks and websites I&rsquo;ve kept over the years. Neatly sorted for ease of use!</p>
+<p><strong>Last Updated:</strong> May 2022</p>
 <h2 id="webring">Webring</h2>
 
 
 <ul class="extra">
 	<li>
-	   <a href="https://wiki.xxiivv.com/site/home.html" target="_blank" rel="noreferrer">∙ XXIIVV Wiki</a>.
+	   <a href="https://wiki.xxiivv.com/site/home.html" target="_blank" rel="noreferrer">⬩ XXIIVV Wiki</a>.
 	</li>
 
 	<li>
-	   <a href="https://ritualdust.com/" target="_blank" rel="noreferrer">∙ RitualDust</a>.
+	   <a href="https://ritualdust.com/" target="_blank" rel="noreferrer">⬩ RitualDust</a>.
 	</li>
 
 	<li>
-	   <a href="https://thomasorus.com" target="_blank" rel="noreferrer">∙ Thomasorus</a>.
+	   <a href="https://thomasorus.com" target="_blank" rel="noreferrer">⬩ Thomasorus</a>.
 	</li>
 
 	<li>
-	   <a href="https://kokorobot.ca/site/home.html" target="_blank" rel="noreferrer">∙ Kokorobot</a>.
+	   <a href="https://kokorobot.ca/site/home.html" target="_blank" rel="noreferrer">⬩ Kokorobot</a>.
 	</li>
 
 	<li>
-	   <a href="https://fdisk.space/#" target="_blank" rel="noreferrer">∙ Fdisk</a>.
+	   <a href="https://fdisk.space/#" target="_blank" rel="noreferrer">⬩ Fdisk</a>.
 	</li>
 </ul>
 
@@ -97,19 +98,19 @@
 
 <ul class="extra">
 	<li>
-	   <a href="https://solar.lowtechmagazine.com/" target="_blank" rel="noreferrer">∙ Low Tech Magazine</a>.
+	   <a href="https://solar.lowtechmagazine.com/" target="_blank" rel="noreferrer">⬩ Low Tech Magazine</a>.
 	</li>
 
 	<li>
-	   <a href="https://reallifemag.com/" target="_blank" rel="noreferrer">∙ Real Life Mag</a>.
+	   <a href="https://reallifemag.com/" target="_blank" rel="noreferrer">⬩ Real Life Mag</a>.
 	</li>
 
 	<li>
-	   <a href="https://two.compost.digital/" target="_blank" rel="noreferrer">∙ Compost</a>.
+	   <a href="https://two.compost.digital/" target="_blank" rel="noreferrer">⬩ Compost</a>.
 	</li>
 
 	<li>
-	   <a href="https://www.orphenyade.com/" target="_blank" rel="noreferrer">∙ the Orphenyade</a>.
+	   <a href="https://www.orphenyade.com/" target="_blank" rel="noreferrer">⬩ the Orphenyade</a>.
 	</li>
 </ul>
 
@@ -118,15 +119,15 @@
 
 <ul class="extra">
 	<li>
-	   <a href="https://practicalselfreliance.com/" target="_blank" rel="noreferrer">∙ Practical Self Reliance</a>.
+	   <a href="https://practicalselfreliance.com/" target="_blank" rel="noreferrer">⬩ Practical Self Reliance</a>.
 	</li>
 
 	<li>
-	   <a href="https://100r.co/" target="_blank" rel="noreferrer">∙ Hundred Rabbits</a>.
+	   <a href="https://100r.co/" target="_blank" rel="noreferrer">⬩ Hundred Rabbits</a>.
 	</li>
 
 	<li>
-	   <a href="https://moddingfridays.bleu255.com/Main_Page" target="_blank" rel="noreferrer">∙ Modding Fridays</a>.
+	   <a href="https://moddingfridays.bleu255.com/Main_Page" target="_blank" rel="noreferrer">⬩ Modding Fridays</a>.
 	</li>
 </ul>
 
@@ -135,23 +136,23 @@
 
 <ul class="extra">
 	<li>
-	   <a href="https://search.marginalia.nu/" target="_blank" rel="noreferrer">∙ Marginalia Search Engine</a>.
+	   <a href="https://search.marginalia.nu/" target="_blank" rel="noreferrer">⬩ Marginalia Search Engine</a>.
 	</li>
 
 	<li>
-	   <a href="https://www.kickscondor.com/" target="_blank" rel="noreferrer">∙ Kicks Condor</a>.
+	   <a href="https://www.kickscondor.com/" target="_blank" rel="noreferrer">⬩ Kicks Condor</a>.
 	</li>
 
 	<li>
-	   <a href="https://status.cafe/" target="_blank" rel="noreferrer">∙ Status Cafe</a>.
+	   <a href="https://status.cafe/" target="_blank" rel="noreferrer">⬩ Status Cafe</a>.
 	</li>
 
 	<li>
-	   <a href="https://portal.mozz.us/" target="_blank" rel="noreferrer">∙ Mozz&#39;s Gemini Portal</a>.
+	   <a href="https://portal.mozz.us/" target="_blank" rel="noreferrer">⬩ Mozz&#39;s Gemini Portal</a>.
 	</li>
 
 	<li>
-	   <a href="http://www.wattxtrawatt.com/" target="_blank" rel="noreferrer">∙ WattExtraWatt</a>.
+	   <a href="http://www.wattxtrawatt.com/" target="_blank" rel="noreferrer">⬩ WattExtraWatt</a>.
 	</li>
 </ul>
 
@@ -160,27 +161,27 @@
 
 <ul class="extra">
 	<li>
-	   <a href="https://www.theleagueofmoveabletype.com/" target="_blank" rel="noreferrer">∙ League of Moveable Type Fonts</a>.
+	   <a href="https://www.theleagueofmoveabletype.com/" target="_blank" rel="noreferrer">⬩ League of Moveable Type Fonts</a>.
 	</li>
 
 	<li>
-	   <a href="https://publicdomainreview.org/collection/unkindo-kimono-designs" target="_blank" rel="noreferrer">∙ Collection of Kimono Pattern Designs</a>.
+	   <a href="https://publicdomainreview.org/collection/unkindo-kimono-designs" target="_blank" rel="noreferrer">⬩ Collection of Kimono Pattern Designs</a>.
 	</li>
 
 	<li>
-	   <a href="https://fontsinuse.com/" target="_blank" rel="noreferrer">∙ Fonts in Use</a>.
+	   <a href="https://fontsinuse.com/" target="_blank" rel="noreferrer">⬩ Fonts in Use</a>.
 	</li>
 
 	<li>
-	   <a href="https://cari.institute/aesthetics" target="_blank" rel="noreferrer">∙ Aesthetics Reference Wiki</a>.
+	   <a href="https://cari.institute/aesthetics" target="_blank" rel="noreferrer">⬩ Aesthetics Reference Wiki</a>.
 	</li>
 
 	<li>
-	   <a href="https://usemodify.com/" target="_blank" rel="noreferrer">∙ Use&amp;Modify</a>.
+	   <a href="https://usemodify.com/" target="_blank" rel="noreferrer">⬩ Use&amp;Modify</a>.
 	</li>
 
 	<li>
-	   <a href="https://unilist.raphaelbastide.com/" target="_blank" rel="noreferrer">∙ Unilist</a>.
+	   <a href="https://unilist.raphaelbastide.com/" target="_blank" rel="noreferrer">⬩ Unilist</a>.
 	</li>
 </ul>
 
@@ -189,31 +190,31 @@
 
 <ul class="extra">
 	<li>
-	   <a href="https://www.freethegameboy.info/" target="_blank" rel="noreferrer">∙ The Battery-less Gameboy</a>.
+	   <a href="https://www.freethegameboy.info/" target="_blank" rel="noreferrer">⬩ The Battery-less Gameboy</a>.
 	</li>
 
 	<li>
-	   <a href="https://fontsinuse.com/uses/28760/neon-genesis-evangelion" target="_blank" rel="noreferrer">∙ The Fonts of Neon Genesis Evangelion</a>.
+	   <a href="https://fontsinuse.com/uses/28760/neon-genesis-evangelion" target="_blank" rel="noreferrer">⬩ The Fonts of Neon Genesis Evangelion</a>.
 	</li>
 
 	<li>
-	   <a href="https://buymusic.club/" target="_blank" rel="noreferrer">∙ Buy Music Club</a>.
+	   <a href="https://buymusic.club/" target="_blank" rel="noreferrer">⬩ Buy Music Club</a>.
 	</li>
 
 	<li>
-	   <a href="https://onezero.medium.com/the-tamagotchi-hacking-communitys-quest-to-cheat-death-dc3e7ee27a0f" target="_blank" rel="noreferrer">∙ Article on Tamagotchi hacking</a>.
+	   <a href="https://onezero.medium.com/the-tamagotchi-hacking-communitys-quest-to-cheat-death-dc3e7ee27a0f" target="_blank" rel="noreferrer">⬩ Article on Tamagotchi hacking</a>.
 	</li>
 
 	<li>
-	   <a href="https://animationobsessive.substack.com/p/our-treat-to-you?s=r" target="_blank" rel="noreferrer">∙ Cartoon Modern Animation Artbook</a>.
+	   <a href="https://animationobsessive.substack.com/p/our-treat-to-you?s=r" target="_blank" rel="noreferrer">⬩ Cartoon Modern Animation Artbook</a>.
 	</li>
 
 	<li>
-	   <a href="https://play.date/" target="_blank" rel="noreferrer">∙ The Playdate console</a>.
+	   <a href="https://play.date/" target="_blank" rel="noreferrer">⬩ The Playdate console</a>.
 	</li>
 
 	<li>
-	   <a href="https://consolevariations.com/" target="_blank" rel="noreferrer">∙ Console Variation Wiki</a>.
+	   <a href="https://consolevariations.com/" target="_blank" rel="noreferrer">⬩ Console Variation Wiki</a>.
 	</li>
 </ul>
 
@@ -222,19 +223,19 @@
 
 <ul class="extra">
 	<li>
-	   <a href="https://www.theguardian.com/artanddesign/gallery/2021/dec/22/swiss-wanderer-soul-of-japan-werner-bischof" target="_blank" rel="noreferrer">∙ Swiss Photographer who captured 1950s Japan</a>.
+	   <a href="https://www.theguardian.com/artanddesign/gallery/2021/dec/22/swiss-wanderer-soul-of-japan-werner-bischof" target="_blank" rel="noreferrer">⬩ Swiss Photographer who captured 1950s Japan</a>.
 	</li>
 
 	<li>
-	   <a href="https://www.ibiblio.org/harris/500milemail.html" target="_blank" rel="noreferrer">∙ The case of the 500-mile email</a>.
+	   <a href="https://www.ibiblio.org/harris/500milemail.html" target="_blank" rel="noreferrer">⬩ The case of the 500-mile email</a>.
 	</li>
 
 	<li>
-	   <a href="https://lparchive.org/Dwarf-For" target="_blank" rel="noreferrer">∙ Dwarf Fortress: The story of Boatmurdered</a>.
+	   <a href="https://lparchive.org/Dwarf-For" target="_blank" rel="noreferrer">⬩ Dwarf Fortress: The story of Boatmurdered</a>.
 	</li>
 
 	<li>
-	   <a href="https://alwaysreadthemanual.com/read/issues/3/jeremy-keith/article.html" target="_blank" rel="noreferrer">∙ As we may link (about Hypertext)</a>.
+	   <a href="https://alwaysreadthemanual.com/read/issues/3/jeremy-keith/article.html" target="_blank" rel="noreferrer">⬩ As we may link (about Hypertext)</a>.
 	</li>
 
 </ul>
@@ -244,35 +245,35 @@
 
 <ul class="extra">
 	<li>
-	   <a href="https://en.wikipedia.org/wiki/Beekeeping_in_Ireland" target="_blank" rel="noreferrer">∙ Beekeeping in Ireland</a>.
+	   <a href="https://en.wikipedia.org/wiki/Beekeeping_in_Ireland" target="_blank" rel="noreferrer">⬩ Beekeeping in Ireland</a>.
 	</li>
 
 	<li>
-	   <a href="https://en.wikipedia.org/wiki/Ishmael_%28Quinn_novel%29" target="_blank" rel="noreferrer">∙ Ishmael</a>.
+	   <a href="https://en.wikipedia.org/wiki/Ishmael_%28Quinn_novel%29" target="_blank" rel="noreferrer">⬩ Ishmael</a>.
 	</li>
 
 	<li>
-	   <a href="https://en.wikipedia.org/wiki/Brewster%27s_Millions" target="_blank" rel="noreferrer">∙ Brewster&#39;s Millions</a>.
+	   <a href="https://en.wikipedia.org/wiki/Brewster%27s_Millions" target="_blank" rel="noreferrer">⬩ Brewster&#39;s Millions</a>.
 	</li>
 
 	<li>
-	   <a href="https://en.m.wikipedia.org/wiki/Societal_collapse" target="_blank" rel="noreferrer">∙ Societal Collapse</a>.
+	   <a href="https://en.m.wikipedia.org/wiki/Societal_collapse" target="_blank" rel="noreferrer">⬩ Societal Collapse</a>.
 	</li>
 
 	<li>
-	   <a href="https://en.m.wikipedia.org/wiki/Solarpunk" target="_blank" rel="noreferrer">∙ Roadside Picnic</a>.
+	   <a href="https://en.m.wikipedia.org/wiki/Solarpunk" target="_blank" rel="noreferrer">⬩ Roadside Picnic</a>.
 	</li>
 
 	<li>
-	   <a href="https://play.date/" target="_blank" rel="noreferrer">∙ Solarpunk</a>.
+	   <a href="https://play.date/" target="_blank" rel="noreferrer">⬩ Solarpunk</a>.
 	</li>
 
 	<li>
-	   <a href="https://en.m.wikipedia.org/wiki/Kingdom_of_Aksum" target="_blank" rel="noreferrer">∙ Kingdom of Aksum</a>.
+	   <a href="https://en.m.wikipedia.org/wiki/Kingdom_of_Aksum" target="_blank" rel="noreferrer">⬩ Kingdom of Aksum</a>.
 	</li>
 
 	<li>
-	   <a href="https://en.m.wikipedia.org/wiki/Kingdom_of_Kush" target="_blank" rel="noreferrer">∙ Kingdom of Kush</a>.
+	   <a href="https://en.m.wikipedia.org/wiki/Kingdom_of_Kush" target="_blank" rel="noreferrer">⬩ Kingdom of Kush</a>.
 	</li>
 </ul>
 
