--- a/about/music/bandcamp_buyin_22/index.html
+++ b/about/music/bandcamp_buyin_22/index.html
@@ -84,6 +84,12 @@
 <li>∘ <strong>May</strong>: &nbsp; Sex & Food - Unknown Mortal Ochestra.</li>
 
 <li>∘ <strong>June</strong>: &nbsp; Oncle Jazz - Men I Trust.</li>
+
+<li>∘ <strong>July</strong>: &nbsp; Ice Melt - Crumb.</li>
+
+<li>∘ <strong>August</strong>: &nbsp; Versions of Modern Performance - Horsegirl.</li>
+
+<li>∘ <strong>September</strong>: &nbsp; Black Focus - Yussef Kamaal.</li>
 </ul>
 
 
