--- a/about/music/index.html
+++ b/about/music/index.html
@@ -71,11 +71,9 @@
 
 <ul class="extra">
 
-<li>∘ Lush and Valentine albums from Snail Mail.</li>
+<li>∘ The Slow Rush from Tame Impala.</li>
 
-<li>∘ Music from Little Green Cars.</li>
-
-<li>∘ Alrighty Aphrodite by Peach Pit.</li>
+<li>∘ Silk Sonic.</li>
 </ul>
 
 <h2 id="music-notes">Music Notes</h2>
