--- a/gallery/experiments/index.html
+++ b/gallery/experiments/index.html
@@ -75,7 +75,7 @@
       <img src="/img/gallery/selfportraiture/SP04.jpg" loading="lazy" >
       <div>
        <h2 style="font-size:28px">Self Portraiture</h2>
-       <p>Part of an art project in early 2020 exploring ways to create self portraits digitally</p>
+       <p>Part of an art project in early 2020 exploring ways to create self portraits digitally.</p>
        </div>
        <hr>
       </a>
@@ -86,7 +86,7 @@
       <img src="/img/gallery/lowres/LR01.jpg" loading="lazy" >
       <div>
        <h2 style="font-size:28px">Low Resolution</h2>
-       <p>Short series of photos with extremely small resolutions</p>
+       <p>Short series of photos with extremely small resolutions.</p>
        </div>
        <hr>
       </a>
@@ -97,7 +97,7 @@
       <img src="/img/gallery/light/LI03.jpg" loading="lazy" >
       <div>
        <h2 style="font-size:28px">Light</h2>
-       <p>Different experiments manipulating or utilising light</p>
+       <p>Different experiments manipulating or utilising light.</p>
        </div>
        <hr>
       </a>
