--- a/gallery/trichrome/index.html
+++ b/gallery/trichrome/index.html
@@ -75,7 +75,7 @@
       <img src="/img/gallery/trichrome/spring/STC05.jpg" loading="lazy" >
       <div>
        <h2 style="font-size:28px">Spring</h2>
-       <p>Spring photos in the Seasons series of Trichrome photos</p>
+       <p>Spring photos in the Seasons series of Trichrome photos.</p>
        </div>
        <hr>
       </a>
@@ -86,7 +86,7 @@
       <img src="/img/gallery/trichrome/winter/WTC05.jpg" loading="lazy" >
       <div>
        <h2 style="font-size:28px">Winter</h2>
-       <p>Winter photos in the Seasons series of Trichrome photos</p>
+       <p>Winter photos in the Seasons series of Trichrome photos.</p>
        </div>
        <hr>
       </a>
@@ -108,7 +108,7 @@
       <img src="/img/gallery/trichrome/summer/TC01.jpg" loading="lazy" >
       <div>
        <h2 style="font-size:28px">Summer</h2>
-       <p>Summer photos in the Seasons series of Trichrome photos</p>
+       <p>Summer photos in the Seasons series of Trichrome photos.</p>
        </div>
        <hr>
       </a>
