--- a/knowledge/beachfossils/index.html
+++ b/knowledge/beachfossils/index.html
@@ -89,15 +89,15 @@
 
 <ul class="extra">
 	<li>
-	   <a href="http://earthsci.org/expeditions/fossil_shapes/fossil_shapes.html" target="_blank" rel="noreferrer">∙ Earth Science Australia identification guide</a>.
+	   <a href="http://earthsci.org/expeditions/fossil_shapes/fossil_shapes.html" target="_blank" rel="noreferrer">⬩ Earth Science Australia identification guide</a>.
 	</li>
 
 	<li>
-	   <a href="https://www.fossils.ie/p/locations.html" target="_blank" rel="noreferrer">∙ Examples of Fossils in Ireland</a>.
+	   <a href="https://www.fossils.ie/p/locations.html" target="_blank" rel="noreferrer">⬩ Examples of Fossils in Ireland</a>.
 	</li>
 
 	<li>
-	   <a href="https://en.wikipedia.org/wiki/Rugosa" target="_blank" rel="noreferrer">∙ Wikipedia: Rugosa, a common coral fossil type</a>.
+	   <a href="https://en.wikipedia.org/wiki/Rugosa" target="_blank" rel="noreferrer">⬩ Wikipedia: Rugosa, a common coral fossil type</a>.
 	</li>
 </ul>
 
