--- a/knowledge/ecovillage/index.html
+++ b/knowledge/ecovillage/index.html
@@ -76,7 +76,7 @@
      <hr>
     <figure>
  	<div>
-     <img src="/img/knowledge/ecovillage05.jpg" loading="lazy" alt="Cloughjordan Ecovillage sign">
+     <img src="/img/knowledge/icons/ecovillage05.jpg" loading="lazy" alt="Cloughjordan Ecovillage sign">
      <figcaption></figcaption>
      
  	</div>
@@ -108,19 +108,19 @@ a large <a href="https://cloughjordancommunityfarm.ie/" target="_blank" rel="noo
 
 <ul class="extra">
 	<li>
-	   <a href="https://www.thevillage.ie/" target="_blank" rel="noreferrer">∙ Cloughjordan Ecovillage</a>.
+	   <a href="https://www.thevillage.ie/" target="_blank" rel="noreferrer">⬩ Cloughjordan Ecovillage</a>.
 	</li>
 
 	<li>
-	   <a href="https://www.youtube.com/c/REDGardens/videos" target="_blank" rel="noreferrer">∙ Resident Bruce Darrel&#39;s youtube channel on farming</a>.
+	   <a href="https://www.youtube.com/c/REDGardens/videos" target="_blank" rel="noreferrer">⬩ Resident Bruce Darrel&#39;s youtube channel on farming</a>.
 	</li>
 
 	<li>
-	   <a href="http://wecreate.ie/" target="_blank" rel="noreferrer">∙ The local Fablab</a>.
+	   <a href="http://wecreate.ie/" target="_blank" rel="noreferrer">⬩ The local Fablab</a>.
 	</li>
 
 	<li>
-	   <a href="https://en.wikipedia.org/wiki/Ecovillage" target="_blank" rel="noreferrer">∙ Ecovillage Wikipedia page</a>.
+	   <a href="https://en.wikipedia.org/wiki/Ecovillage" target="_blank" rel="noreferrer">⬩ Ecovillage Wikipedia page</a>.
 	</li>
 </ul>
 
