--- a/knowledge/ipod_modding/index.html
+++ b/knowledge/ipod_modding/index.html
@@ -75,7 +75,7 @@
       <img src="/img/knowledge/ipod_modding/rockbox_theming.svg" loading="lazy" >
       <div>
        <h2 style="font-size:28px">Rockbox Theming</h2>
-       <p>An introduction to more advanced applications of the rockbox theming language</p>
+       <p>An introduction to more advanced applications of the rockbox theming language.</p>
        </div>
        <hr>
       </a>
