--- a/projects/famicase/index.html
+++ b/projects/famicase/index.html
@@ -89,11 +89,11 @@
 
 <ul class="extra">
 	<li>
-	   <a href="https://famicase.com/" target="_blank" rel="noreferrer">∙ Famicase Website</a>.
+	   <a href="https://famicase.com/" target="_blank" rel="noreferrer">⬩ Famicase Website</a>.
 	</li>
 
 	<li>
-	   <a href="https://super-meteor.com/?pid=159388800" target="_blank" rel="noreferrer">∙ Purchase the Famicase 2021 Zine</a>.
+	   <a href="https://super-meteor.com/?pid=159388800" target="_blank" rel="noreferrer">⬩ Purchase the Famicase 2021 Zine</a>.
 	</li>
 </ul>
 
