--- a/projects/streetwalker/index.html
+++ b/projects/streetwalker/index.html
@@ -95,11 +95,11 @@
 
 <ul class="extra">
 	<li>
-	   <a href="https://www.lexaloffle.com/bbs/?tid=38920" target="_blank" rel="noreferrer">∙ Play Streetwalker</a>.
+	   <a href="https://www.lexaloffle.com/bbs/?tid=38920" target="_blank" rel="noreferrer">⬩ Play Streetwalker</a>.
 	</li>
 
 	<li>
-	   <a href="https://www.lexaloffle.com/bbs/cposts/yu/yuwekogiwu-0.p8.png" target="_blank" rel="noreferrer">∙ Download the cart</a>.
+	   <a href="https://www.lexaloffle.com/bbs/cposts/yu/yuwekogiwu-0.p8.png" target="_blank" rel="noreferrer">⬩ Download the cart</a>.
 	</li>
 </ul>
 
