--- a/about/colophon/index.html
+++ b/about/colophon/index.html
@@ -74,18 +74,39 @@
         </ul>
       
      <hr>
-    <p>  A comprehensive dive into the design, and creation of this website</p>
-<h2 id="background">Background</h2>
-<p>  This site was made to scratch an itch I long had. Sharing stuff on social media has never been my mojo, I&rsquo;ll often post my photography, however I yearned for something more expansive and exciting so I made a website.</p>
-<p>  The first version of the site was made by modifying what I felt was a suitable theme, however I soon became aware of my lack of knowledge in web design and development, scrapping the site soon after I finished it. This current version has been built from scratch, using Hugo as a method of generating files offline to upload to github.</p>
-<h2 id="inspiration">Inspiration</h2>
-<p>  Lizbeth Poirier&rsquo;s beautiful site <a href="https://ritualdust.com/" target="_blank" rel="noopener">Ritual Dust</a> was a big inspiration and help when designing the site, Lizbeth has an incredibly helpful collection of resources that I learned a lot from including Fonts, Html and Css. Thomasorus&rsquo; <a href="https://thomasorus.com/html-tips.html" target="_blank" rel="noopener">Html Tips</a> guide is a must read if your building your own site with minimal knowledge. Without it, I wouldn&rsquo;t have used Flexboxes or known how to properly organise my code.</p>
+    <p>  A comprehensive dive into the design, creation and philosophy of this site.</p>
 <h2 id="site-philosophy">Site Philosophy</h2>
-<p>  This site was made with two things in mind: Fun and Accessibility. Each section has it&rsquo;s own, vibrant theme using <a href="https://thomasorus.com/home.html" target="_blank" rel="noopener">Thomasorus&rsquo;</a> beautiful css theming solution. The code was also designed with simplicity in mind, there is no javascript used and every element is completely adaptive without the use of media queries. Lastly, all images are completely optimized for fast page loading, thanks to <a href="https://kokorobot.ca/site/notes.html" target="_blank" rel="noopener">Rekka Bellum&rsquo;s</a> easy to follow <a href="https://kokorobot.ca/site/leanimages.html" target="_blank" rel="noopener">guide</a>! Most pages have 1080p images, but on the large gallery ones, images are reduced to 720p to help with bandwidth.</p>
-<h2 id="fonts">Fonts</h2>
-<p>  This site uses 3 different fonts. <a href="https://gitlab.com/swrs/cmrdd" target="_blank" rel="noopener">CMRDD Bold</a> is used for links/clickable content. <a href="https://github.com/jpt/barlow" target="_blank" rel="noopener">Barlow Black</a> is used for all Headers. Finally, <a href="https://www.theleagueofmoveabletype.com/league-spartan" target="_blank" rel="noopener">League Spartan</a> is used for the text on the site. Each font is both free and open source, their licenses allowing for web use and modification. <a href="https://www.fontsquirrel.com/tools/webfont-generator" target="_blank" rel="noopener">Font Squirrel&rsquo;s</a> Webfont generator was extremely useful in preparing the fonts for the website.</p>
-<h2 id="future-additions">Future Additions</h2>
-<p>  While building the site, decisions were made to make the site more accessible via older browser (using Netsurf as a testing point). However, the theming system doesn&rsquo;t work and there are some other tweaks I&rsquo;d like to make to perfect it. On top of that, the accessibility of my website isn&rsquo;t as good as it could be. Currently all images are captioned and correct etiquette was followed for page layouts, but I&rsquo;d like to give people options to turn off custom theming and fonts. This however would likely involve adding javascript which I&rsquo;m slightly reluctant on doing. But we&rsquo;ll see.</p>
+<p>  This site exists to scratch an itch I&rsquo;ve long had. Sharing stuff on social media has never been my mojo, I&rsquo;ll often post my photography, however I yearned for something more expansive and interesting, so I made a website.</p>
+<p>  The design of this site was made with one goal in mind: create vibrant a site that looks good and is fun to use, with the smallest file size possible. This meant several things, for one, no javascript but also no media queries to change the layout. Fonts are used, but are extremely slimmed down to reduce filesize. Combined with optimising images, it means even the largest page on the site is under 800kb and the smallest is just 45kb.</p>
+<h2 id="design-language">Design Language</h2>
+<figure>
+ 	<div>
+     <img src="/img/about/fonts.svg" loading="lazy" alt="3 words, corresponding to their font names: Barlow, League Spartan and Lunchtype22">
+     <figcaption></figcaption>
+     
+ 	</div>
+ </figure>
+<p>  The site has a simple, consistent design language to make discerning the content of pages easy. Page headers use the <a href="https://github.com/jpt/barlow" target="_blank" rel="noopener">Barlow</a> fontface with a weight of 500. Text and paragraphs are in <a href="https://github.com/theleagueof/league-spartan" target="_blank" rel="noopener">League Spartan Variable</a> and all links use the <a href="https://usemodify.com/fonts/lunchtype/" target="_blank" rel="noopener">Lunchtype22</a> fontface.</p>
+<p>  Links have a set of rules to follow depending on where it is, and what it links to. Inline links look like <a href="">this</a>, having an underline for visibility. Links in lists have one of two operator prefixes to display if a link is external or internal. &ldquo;•&rdquo; operators mean the link connects to somewhere within the site, while &ldquo;⬩&rdquo; means the links is an external url and will open in a new tab. &ldquo;⬝&rdquo; is designated for gemini content and should open in your designated browser.</p>
+<h2 id="inspirations-and-mentions">Inspirations and Mentions</h2>
+<p>  Lizbeth Poirier&rsquo;s beautiful site <a href="https://ritualdust.com/" target="_blank" rel="noopener">Ritual Dust</a> was a big inspiration and help when designing the site, Lizbeth has an incredibly helpful collection of resources that I learned a lot from including Fonts, Html and Css. Thomasorus&rsquo; <a href="https://thomasorus.com/html-tips.html" target="_blank" rel="noopener">Html Tips</a> guide is a great read if you are building your own site with minimal knowledge. Lastly, I used <a href="https://kokorobot.ca/site/notes.html" target="_blank" rel="noopener">Rekka Bellum&rsquo;s</a> great imagemagick <a href="https://kokorobot.ca/site/leanimages.html" target="_blank" rel="noopener">guide</a> to create a script for optimising my images and reducing their file sizes.</p>
+
+
+<h2 id="further-reading" style="margin-top:35px;">Further Reading</h2>
+<ul class="extra">
+	<li>
+	   <a href="./now/">∙ Now - This month&#39;s plans</a>.
+	</li>
+
+	<li>
+	   <a href="./shortjournal/">∙ Short Journal - What I&#39;m up to</a>.
+	</li>
+
+	<li>
+	   <a href="./colophon">∙ Colophon - Site Design info</a>.
+	</li>
+</ul>
+
 
   <div class="back">
    <a class="prev" href="/about/">〈 Back to  About </a>
