--- a/gallery/index.html
+++ b/gallery/index.html
@@ -75,7 +75,7 @@
       <img src="/img/gallery/trichrome/summer/TC01.jpg" loading="lazy" >
       <div>
        <h2 style="font-size:28px">Trichrome</h2>
-       <p>Collection of my photographic works and techniques</p>
+       <p>Collection of my photographic works and techniques.</p>
        </div>
        <hr>
       </a>
