--- a/gallery/places/index.html
+++ b/gallery/places/index.html
@@ -75,7 +75,7 @@
       <img src="/img/gallery/places/loughderg01.jpg" loading="lazy" >
       <div>
        <h2 style="font-size:28px">Lough Derg</h2>
-       <p>Trichrome photos taken in the idyllic Lough Derg</p>
+       <p>Trichrome photos taken in the idyllic Lough Derg.</p>
        </div>
        <hr>
       </a>
