--- a/projects/gamejams/index.html
+++ b/projects/gamejams/index.html
@@ -105,11 +105,11 @@
 
 <ul class="extra">
 	<li>
-	   <a href="https://www.lexaloffle.com/bbs/?tid=28691" target="_blank" rel="noreferrer">∙ Play Tiny Cookie Clicker</a>.
+	   <a href="https://www.lexaloffle.com/bbs/?tid=28691" target="_blank" rel="noreferrer">⬩ Play Tiny Cookie Clicker</a>.
 	</li>
 
 	<li>
-	   <a href="https://www.lexaloffle.com/bbs/?tid=34967" target="_blank" rel="noreferrer">∙ Play Z demo</a>.
+	   <a href="https://www.lexaloffle.com/bbs/?tid=34967" target="_blank" rel="noreferrer">⬩ Play Z demo</a>.
 	</li>
 </ul>
 
