--- a/journal/index.html
+++ b/journal/index.html
@@ -66,13 +66,21 @@
   <main>
   
   <h1>Journal</h1>
-   <div class="main-box list-box">
+   <div class="main-box journalbox">
    <ul>
   
      <li>
+     <a href="/journal/web-optimisations/">
+      Extreme Web Optimizations, without Compromising Style
+     <p style="margin-bottom: 10px;">A tear-down of the web optimizations I developed while putting this site together.</p>
+     <hr>
+     </a>
+     </li>
+   
+     <li>
      <a href="/journal/year-review-2021/">
       Year Review 2021
-     <p style="margin-bottom: 5px;">A breakdown review of how my year went, and my goals for next year.</p>
+     <p style="margin-bottom: 10px;">A breakdown review of how my year went, and my goals for next year.</p>
      <hr>
      </a>
      </li>
