--- a/about/index.html
+++ b/about/index.html
@@ -81,17 +81,17 @@
 <h2 id="where-to-find-me" style="margin-top:35px;">Where to find me</h2>
 <div>
         <div class="contactlist">
-        ⬩ Mastodon: <a href="https://post.lurk.org/@dook" target="_blank" rel="noreferrer">Dook@post.lurk.org</a>
+        🞙 Mastodon: <a href="https://post.lurk.org/@dook" target="_blank" rel="noreferrer">Dook@post.lurk.org</a>
         </div>
       </div>
 <div>
         <div class="contactlist">
-        ⬩ Pixelfed: <a href="https://pixelfed.social/Dook/" target="_blank" rel="noreferrer">Dook@pixelfed.social</a>
+        🞙 Pixelfed: <a href="https://pixelfed.social/Dook/" target="_blank" rel="noreferrer">Dook@pixelfed.social</a>
         </div>
       </div>
 <div>
         <div class="contactlist">
-        ⬩ Contact me: <a href="mailto:contact@d00k.net" target="_blank" rel="noreferrer">contact@d00k.net</a>
+        🞙 Contact me: <a href="mailto:contact@d00k.net" target="_blank" rel="noreferrer">contact@d00k.net</a>
         </div>
       </div>
 
