--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
  <main>
   <article style="--flexpos:center;">
    <div class="flex-box">
-    <div class="main-box">
+    <div class="home-box">
       <div>
        <img class="icon" src="img/assets/gallery.svg" >
         <div>
@@ -89,7 +89,7 @@
     <a class="round-button" href="/gallery/">See More</a>
    </div>
 
-    <div class="main-box">
+    <div class="home-box">
      <div>
       <img class="icon" src="img/assets/projects.svg">
        <div>
@@ -112,7 +112,7 @@
     </div>
 
    <div class="flex-box">
-    <div class="main-box">
+    <div class="home-box">
      <div>
       <img class="icon" src="img/assets/knowledge.svg">
        <div>
@@ -133,7 +133,7 @@
       <a class="round-button" href="/knowledge/">See More</a>
      </div>
 
-    <div class="main-box">
+    <div class="home-box">
      <div>
       <img class="icon" src="img/assets/journal.svg">
        <div>
