--- a/gallery/places/index.html
+++ b/gallery/places/index.html
@@ -71,6 +71,17 @@
     <div class="columns-2">
    
         <div class="main-box list-box">
+     <a href="/gallery/places/westport/">
+      <img src="/img/gallery/places/westport06.jpg" loading="lazy" >
+      <div>
+       <h2 style="font-size:28px">Westport</h2>
+       <p>Photos taken in and around Westport.</p>
+       </div>
+       <hr>
+      </a>
+     </div>
+    
+        <div class="main-box list-box">
      <a href="/gallery/places/loughderg/">
       <img src="/img/gallery/places/loughderg01.jpg" loading="lazy" >
       <div>
