updating the gallery

--- a/gallery/experiments/index.html
+++ b/gallery/experiments/index.html
@@ -94,9 +94,9 @@
     
         <div class="main-box list-box">
      <a href="/gallery/experiments/light/">
-      <img src="/img/gallery/light/LI03.jpg" loading="lazy" >
+      <img src="/img/gallery/light/light02.jpg" loading="lazy" >
       <div>
-       <h2 style="font-size:28px">Light</h2>
+       <h2 style="font-size:28px">Light Experiments</h2>
        <p>Different experiments manipulating or utilising light.</p>
        </div>
        <hr>
