--- a/about/colophon/index.html
+++ b/about/colophon/index.html
@@ -87,7 +87,7 @@
  	</div>
  </figure>
 <p>  The site has a simple, consistent design language to make discerning the content of pages easy. Page headers use the <a href="https://github.com/jpt/barlow" target="_blank" rel="noopener">Barlow</a> fontface with a weight of 500. Text and paragraphs are in <a href="https://github.com/theleagueof/league-spartan" target="_blank" rel="noopener">League Spartan Variable</a> and all links use the <a href="https://usemodify.com/fonts/lunchtype/" target="_blank" rel="noopener">Lunchtype22</a> fontface.</p>
-<p>  Links have a set of rules to follow depending on where it is, and what it links to. Inline links look like <a href="">this</a>, having an underline for visibility. Links in lists have one of two operator prefixes to display if a link is external or internal. &ldquo;•&rdquo; operators mean the link connects to somewhere within the site, while &ldquo;🞙&rdquo; means the links is an external url and will open in a new tab. &ldquo;￭&rdquo; is designated for gemini content and should open in your browser of choice.</p>
+<p>  Links have a set of rules to follow depending on where it is, and what it links to. Inline links look like <a href="">this</a>, having an underline for visibility. Links in lists have one of two operator prefixes to display if a link is external or internal. &ldquo;•&rdquo; operators mean the link connects to somewhere within the site, while &ldquo;⬩&rdquo; means the links is an external url and will open in a new tab. &ldquo;▪&rdquo; is designated for gemini content and should open in your browser of choice.</p>
 <h2 id="inspirations-and-mentions">Inspirations and Mentions</h2>
 <p>  Lizbeth Poirier&rsquo;s beautiful site <a href="https://ritualdust.com/" target="_blank" rel="noopener">Ritual Dust</a> was a big inspiration and help when designing the site, Lizbeth has an incredibly helpful collection of resources that I learned a lot from including Fonts, Html and Css. Thomasorus&rsquo; <a href="https://thomasorus.com/html-tips.html" target="_blank" rel="noopener">Html Tips</a> guide is a great read if you are building your own site with minimal knowledge. Lastly, I used <a href="https://kokorobot.ca/site/notes.html" target="_blank" rel="noopener">Rekka Bellum&rsquo;s</a> great imagemagick <a href="https://kokorobot.ca/site/leanimages.html" target="_blank" rel="noopener">guide</a> to create a script for optimising my images and reducing their file sizes.</p>
 
@@ -95,15 +95,11 @@
 <h2 id="further-reading" style="margin-top:35px;">Further Reading</h2>
 <ul class="extra">
 	<li>
-	   <a href="./now/">∙ Now - This month&#39;s plans</a>.
+	   <a href="/journal/web-optimisations">∙ Journal post on optimisations employed in the site</a>.
 	</li>
 
 	<li>
-	   <a href="./shortjournal/">∙ Short Journal - What I&#39;m up to</a>.
-	</li>
-
-	<li>
-	   <a href="./colophon">∙ Colophon - Site Design info</a>.
+	   <a href="https://thomasorus.com/web-development.html" target="_blank" rel="noreferrer">⬩ Thomasorus&#39; Web Dev Guides</a>.
 	</li>
 </ul>
 
