--- a/about/music/index.html
+++ b/about/music/index.html
@@ -71,9 +71,9 @@
 
 <ul class="extra">
 
-<li>∘ The Slow Rush from Tame Impala.</li>
+<li>∘ How it Ends by TOLEDO.</li>
 
-<li>∘ Silk Sonic.</li>
+<li>∘ The Untourable Album by Men I Trust.</li>
 </ul>
 
 <h2 id="music-notes">Music Notes</h2>
