--- a/about/now/index.html
+++ b/about/now/index.html
@@ -66,28 +66,28 @@
    <main>
     <h1>Now</h1>
      <hr>
-    <h2 id="september-2022">September 2022</h2>
+    <h2 id="october-2022">October 2022</h2>
 
 
 <ul class="extra">
 <li>∘ Learning C with "Learning C for Pebble".</li>
 
-<li>∘ Started and finished a complete redesign of the website to it's final form.</li>
+<li>∘ Try finish modding my ipod.</li>
 
 <li>∘ Still working on an accessible version of my iPod theme for people with vision difficulties.</li>
 
-<li>∘ Began writing a technical book for writing rockbox themes for ipods.</li>
+<li>∘ Continue writing my technical book for ipod theming.</li>
 
-<li>∘ Starting taking some photos again.</li>
+<li>∘ Organised all my files.</li>
 </ul>
 
 <h2 id="whats-playing">What&rsquo;s Playing?</h2>
 
 
 <ul class="extra">
-<li>∘ Currently Reading Yu Yu Hakusho.
+<li>∘ Currently Reading World Trigger.
 
-<li>∘ Listening to Black Focus by Yussef Kamaal.
+<li>∘ Listening to How it Ends by TOLEDO.
 
 <li>∘ Started playing some games again.
 </ul>
