--- a/about/shortjournal/2022-10-9/index.html
+++ b/about/shortjournal/2022-10-9/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/css/style.css">
 <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
  
-    <title>D00k &nbsp;• &nbsp;  Bandcamp Buyin&#39; 2022 </title>
+    <title>D00k &nbsp;• &nbsp;  2022 10 9 </title>
  </head>
 
  
@@ -63,40 +63,14 @@
 
   </header>
    <main>
-    <h1>Bandcamp Buyin&#39; 2022</h1>
+    <h1>2022 10 9</h1>
      
      <hr>
-    <p>  In an attempt to move away from music streaming, every month of 2022 I bought an album on Bandcamp. Some are favourites of mine, others only just released and are new to me.</p>
-<p><a href="https://bandcamp.com/le_dook" target="_blank" rel="noopener">∙ Follow me on Bandcamp</a>.</p>
-<h2 id="the-list">The List</h2>
-
-
-<ul class="extra">
-
-<li>∘ <strong>January</strong>: &nbsp; Fool - McGee.</li>
-
-<li>∘ <strong>February</strong>: &nbsp; Who Really Cares - TV Girl.</li>
-
-<li>∘ <strong>March</strong>: &nbsp; Invitation to Her's - Her's.</li>
-
-<li>∘ <strong>April</strong>: &nbsp; DELI DAYDREAMS - Kojaque.</li>
-
-<li>∘ <strong>May</strong>: &nbsp; Sex & Food - Unknown Mortal Ochestra.</li>
-
-<li>∘ <strong>June</strong>: &nbsp; Oncle Jazz - Men I Trust.</li>
-
-<li>∘ <strong>July</strong>: &nbsp; Ice Melt - Crumb.</li>
-
-<li>∘ <strong>August</strong>: &nbsp; Versions of Modern Performance - Horsegirl.</li>
-
-<li>∘ <strong>September</strong>: &nbsp; Black Focus - Yussef Kamaal.</li>
-
-<li>∘ <strong>October</strong>: &nbsp; Heart Under - Just Mustard.</li>
-</ul>
-
+    <p>  It&rsquo;s a crazy couple of months for me, but I finally found some time to tend to the website. First thing I did was get to finalising it&rsquo;s design, the way it had been before was overly garish and pretty difficult to look at on some pages, the new style is far better in this regard. I also took the time to go absolutely overboard on optimising every possible thing I could, making each pretty tiny for what it is, I made a writeup on everything I did <a href="https://d00k.net/journal/web-optimisations/" target="_blank" rel="noopener">here</a>.</p>
+<p>  I also managed to find a new home on mastodon during this time at Lurk! It&rsquo;s a great community. A few new projects have been started as well; an accessible version of my ipod them after some user feedback, as well as a book for other people looking into making their own themes. Currently everything I&rsquo;m doing is building up for my portfolio to switch colleges with next year, so I&rsquo;m gonna be busy for the the next few months!</p>
 
   <div class="back">
-   <a class="prev" href="/about/music/">〈 Back to  Music </a>
+   <a class="prev" href="/about/shortjournal/">〈 Back to  Dook&#39;s Journal </a>
   </div>
   </main>
  </body>
