--- a/about/shortjournal/index.html
+++ b/about/shortjournal/index.html
@@ -68,6 +68,16 @@
      <hr>
     
     <article>
+	<h2>2022-10-09</h2>
+	<p>  It&rsquo;s a crazy couple of months for me, but I finally found some time to tend to the website. First thing I did was get to finalising it&rsquo;s design, the way it had been before was overly garish and pretty difficult to look at on some pages, the new style is far better in this regard. I also took the time to go absolutely overboard on optimising every possible thing I could, making each pretty tiny for what it is, I made a writeup on everything I did <a href="https://d00k.net/journal/web-optimisations/" target="_blank" rel="noopener">here</a>.</p>
+<p>  I also managed to find a new home on mastodon during this time at Lurk! It&rsquo;s a great community. A few new projects have been started as well; an accessible version of my ipod them after some user feedback, as well as a book for other people looking into making their own themes. Currently everything I&rsquo;m doing is building up for my portfolio to switch colleges with next year, so I&rsquo;m gonna be busy for the the next few months!</p>
+
+</article>
+<hr style="width: 25%;">
+
+
+    
+    <article>
 	<h2>2022-08-03</h2>
 	<p>My productivity has been hampered the past few weeks by illness, but I&rsquo;ve slowly started to get back into my projects by improving my website. Shaved off a few hundred Mbs with favicon and other image optimisations, which I&rsquo;m really happy with. I&rsquo;ve also started to look for a new home server on Mastodon, my current server is shutting down for a 2 month rebuild and restart so I took it as a signal to finally find somewhere better. This time I want to find a place less general, that matches my interests as well as political beliefs etc.</p>
 
