--- a/projects/index.html
+++ b/projects/index.html
@@ -75,7 +75,7 @@
       <img src="/img/projects/rebbleweather04.jpg" loading="lazy" >
       <div>
        <h2 style="font-size:28px">Rebble Weather Icons</h2>
-       <p>Reinventing the Pebble weather icons for use in the Rebble project.</p>
+       <p>Reimagining the Pebble weather icons for use in future projects.</p>
        </div>
        <hr>
       </a>
