--- a/projects/rebble_weather/index.html
+++ b/projects/rebble_weather/index.html
@@ -75,7 +75,7 @@
       
      <hr>
     <h2 id="the-task">The task</h2>
-<p>  The Pebble revival project, Rebble, has been branching out to make replacement apps and firmware for Pebbles to help with longevity. Part of this has included remaking icons as the original Pebble ones are not open source or legally usable. This page details the weather icons I designed for the project, and for use in my own watchfaces. They follow the same rules as the original icons, however have their own Rebble twist to them.</p>
+<p>  Inspired by the Pebble revival project, Rebble and their unique aesthetic inspired by the original series of icons developed by Heydays design for pebble, I set out to make my own weather icons to use in projects on the watches in the future. While I took inspiration to make them familiar to users, I also sought to give them their own flair and personality.</p>
 <figure>
  	<div>
      <img src="/img/projects/rebbleweather01.jpg" loading="lazy" alt="Many various icons for apps, weather and watch functions">
