--- a/about/index.html
+++ b/about/index.html
@@ -122,6 +122,10 @@
 	<li>
 	   <a href="./music">∙ Music - What am I listening to?</a>.
 	</li>
+
+	<li>
+	   <a href="./manga">∙ Manga - List of Read and Reading</a>.
+	</li>
 </ul>
 
 
