--- a/about/now/index.html
+++ b/about/now/index.html
@@ -66,30 +66,31 @@
    <main>
     <h1>Now</h1>
      <hr>
-    <h2 id="october-2022">October 2022</h2>
+    <h2 id="november-2022">November 2022</h2>
 
 
 <ul class="extra">
-<li>∘ Learning C with "Learning C for Pebble".</li>
+<li>∘ Putting my head down and finishing as many unfinished projects started this year.</li>
 
-<li>∘ Try finish modding my ipod.</li>
+<li>∘ Completing my technical guide for ipod theming.</li>
 
-<li>∘ Still working on an accessible version of my iPod theme for people with vision difficulties.</li>
+<li>∘ Put all my mods into the iPod.</li>
 
-<li>∘ Continue writing my technical book for ipod theming.</li>
+<li>∘ Repair the broken Pebble watches lying around.</li>
 
-<li>∘ Organised all my files.</li>
+<li>∘ Start my portfolio for design college.</li>
 </ul>
 
 <h2 id="whats-playing">What&rsquo;s Playing?</h2>
 
 
 <ul class="extra">
-<li>∘ Currently Reading World Trigger.
+<li>∘ Currently Reading too much manga to keep up.
+
+<li>∘ Currently Reading "The Dawn of Everything".
 
 <li>∘ Listening to How it Ends by TOLEDO.
 
-<li>∘ Started playing some games again.
 </ul>
 
 <p><a href="./2022">∙ now 2022</a></p>
