--- a/about/manga/index.html
+++ b/about/manga/index.html
@@ -3,17 +3,16 @@
  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="alternate" type="application/rss+xml" href="https://d00k.net/tags/index.xml" title="D00k" />
     <link rel="stylesheet" href="/css/style.css">
 <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
  
-    <title>D00k &nbsp;• &nbsp;  Tags </title>
+    <title>D00k &nbsp;• &nbsp;  Manga </title>
  </head>
 
  
  <body>
-  <header class="home colours">
-   
+  <header class="about colours">
+    
 <div>
 <nav>
 <ul class="name">
@@ -53,7 +52,7 @@
   
    
     <li>
-      <a class="" href="/about/">
+      <a class="active" href="/about/">
         About
       </a>
     </li>
@@ -63,171 +62,25 @@
 </div>
 
   </header>
-  <main class="no-top">
-
-  <h1 class="Title">Tags</h1>
-  <hr>
-  
-    <p>
-     <a href="/tags/lowres/">∙ lowres</a>
-    </p>
-
-   
-    <p>
-     <a href="/tags/portraiture/">∙ portraiture</a>
-    </p>
-
-   
-    <p>
-     <a href="/tags/experiments/">∙ experiments</a>
-    </p>
-
-   
-    <p>
-     <a href="/tags/year-review/">∙ year review</a>
-    </p>
-
-   
-    <p>
-     <a href="/tags/fossils/">∙ fossils</a>
-    </p>
-
-   
-    <p>
-     <a href="/tags/beach/">∙ beach</a>
-    </p>
-
-   
-    <p>
-     <a href="/tags/techniques/">∙ techniques</a>
-    </p>
-
-   
-    <p>
-     <a href="/tags/origami/">∙ origami</a>
-    </p>
-
-   
-    <p>
-     <a href="/tags/art/">∙ art</a>
-    </p>
-
-   
-    <p>
-     <a href="/tags/programming/">∙ programming</a>
-    </p>
-
-   
-    <p>
-     <a href="/tags/website/">∙ website</a>
-    </p>
-
-   
-    <p>
-     <a href="/tags/myself/">∙ myself</a>
-    </p>
-
-   
-    <p>
-     <a href="/tags/music/">∙ music</a>
-    </p>
-
-   
-    <p>
-     <a href="/tags/seasons/">∙ seasons</a>
-    </p>
-
-   
-    <p>
-     <a href="/tags/permaculture/">∙ permaculture</a>
-    </p>
-
-   
-    <p>
-     <a href="/tags/technology/">∙ technology</a>
-    </p>
-
-   
-    <p>
-     <a href="/tags/setup/">∙ setup</a>
-    </p>
-
-   
-    <p>
-     <a href="/tags/ipod/">∙ ipod</a>
-    </p>
-
-   
-    <p>
-     <a href="/tags/rockbox/">∙ rockbox</a>
-    </p>
-
-   
-    <p>
-     <a href="/tags/photography/">∙ Photography</a>
-    </p>
-
-   
-    <p>
-     <a href="/tags/bees/">∙ bees</a>
-    </p>
-
-   
-    <p>
-     <a href="/tags/garden/">∙ garden</a>
-    </p>
-
-   
-    <p>
-     <a href="/tags/pico8/">∙ pico8</a>
-    </p>
-
-   
-    <p>
-     <a href="/tags/games/">∙ games</a>
-    </p>
-
-   
-    <p>
-     <a href="/tags/fonts/">∙ fonts</a>
-    </p>
-
-   
-    <p>
-     <a href="/tags/web/">∙ web</a>
-    </p>
-
-   
-    <p>
-     <a href="/tags/places/">∙ places</a>
-    </p>
-
-   
-    <p>
-     <a href="/tags/trichrome/">∙ trichrome</a>
-    </p>
-
-   
-    <p>
-     <a href="/tags/flowers/">∙ flowers</a>
-    </p>
-
-   
-    <p>
-     <a href="/tags/pebble/">∙ pebble</a>
-    </p>
-
-   
-    <p>
-     <a href="/tags/design/">∙ design</a>
-    </p>
-
-   
+   <main>
+    <h1>Manga</h1>
+     
+     <hr>
+    <figure>
+ 	<div>
+     <img src="/img/about/index.jpg" loading="lazy" alt="A grey and creamy white keyboard">
+     <figcaption>Blue Period - Yamaguchi Tsubasa</figcaption>
+     <hr>
+ 	</div>
+ </figure>
+<h2 id="how-good-an-art-is-isnt-determined-by-techniques-art-is-a-language-without-words">&ldquo;How good an art is; isn’t determined by techniques. Art is a language without words.&rdquo;</h2>
+<p>under construction</p>
+<p>:3)</p>
 
   <div class="back">
-   <a href="/">〈 Back to  Home </a>
+   <a class="prev" href="/about/">〈 Back to  About </a>
   </div>
- </main>
+  </main>
  </body>
 
  <footer>
