--- a/projects/index.html
+++ b/projects/index.html
@@ -71,6 +71,17 @@
     <div class="columns-2">
    
         <div class="main-box list-box">
+     <a href="/projects/timetwistpop/">
+      <img src="/img/projects/timetwistpop02.jpg" loading="lazy" >
+      <div>
+       <h2 style="font-size:28px">Time Twist Pop</h2>
+       <p>A simple, vibrant watchface for the colour models of the Pebble watch family.</p>
+       </div>
+       <hr>
+      </a>
+     </div>
+    
+        <div class="main-box list-box">
      <a href="/projects/rebble_weather/">
       <img src="/img/projects/rebbleweather04.jpg" loading="lazy" >
       <div>
