--- a/about/manga/index.html
+++ b/about/manga/index.html
@@ -74,7 +74,7 @@
  	</div>
  </figure>
 <p>| &ldquo;How good an art is; isn’t determined by techniques. Art is a language without words.&rdquo; - Saeki Masako, Blue Period.</p>
-<p><strong>Currently Reading</strong>: Bloom into you, Bungou Stray Dogs.</p>
+<p><strong>Currently Reading</strong>: The world of Machida-kun, Sato-kun ga shinde kara.</p>
 
 
 <ul class="extra">
@@ -124,7 +124,9 @@
 <li>∘ Ao Haru Ride.</li>
 <li>∘ A Sign of Affection.</li>
 <li>∘ Bloom into you.</li>
-<li>∘ Bungou Stray Dogs.</li>
+<li>∘ Bakuman.</li>
+<li>∘ Usotoki Rhetoric.</li>
+<li>∘ Kaoru Hana wa Rin to Saku.</li>
 </ul>
 
 
