--- a/about/music/bandcamp_buyin_22/index.html
+++ b/about/music/bandcamp_buyin_22/index.html
@@ -92,6 +92,8 @@
 <li>∘ <strong>September</strong>: &nbsp; Black Focus - Yussef Kamaal.</li>
 
 <li>∘ <strong>October</strong>: &nbsp; Heart Under - Just Mustard.</li>
+
+<li>∘ <strong>October</strong>: &nbsp; When the Lights go - Totally Enormous Extinct Dinosaurs.</li>
 </ul>
 
 
