--- a/about/now/index.html
+++ b/about/now/index.html
@@ -70,9 +70,11 @@
 
 
 <ul class="extra">
-<li>∘ Putting my head down and finishing as many unfinished projects started this year.</li>
+<li>∘ Currently working on the <a class="link" href="/projects/timetwistpop">Time Twist Pop</a> watchface for the Rebble Hackathon.</li>
 
-<li>∘ Completing my technical guide for ipod theming.</li>
+<li>∘ Updated <a class="link" href="/projects/adwaitapod">adwaitapod</a> to version 2.0.</li>
+
+<li>∘ Continue working on my rockbox theming technical book.</li>
 
 <li>∘ Put all my mods into the iPod.</li>
 
@@ -87,7 +89,7 @@
 <ul class="extra">
 <li>∘ Currently Reading too much manga to keep up.
 
-<li>∘ Currently Reading "The Dawn of Everything".
+<li>∘ Listening to When the Lights go from TEED.
 
 <li>∘ Listening to How it Ends by TOLEDO.
 
