adding Opengraph data

--- a/about/music/index.html
+++ b/about/music/index.html
@@ -3,11 +3,14 @@
  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>D00k &nbsp;• &nbsp;  Music </title>
     <link rel="alternate" type="application/rss+xml" href="https://d00k.net/about/music/index.xml" title="D00k" />
     <link rel="stylesheet" href="/css/style.css">
-<link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
- 
-    <title>D00k &nbsp;• &nbsp;  Music </title>
+    <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
+    <meta property="og:image" content="" />
+    <meta property="og:description" 
+  content="" />
+    <a rel="me" href="https://post.lurk.org/@dook" style="display: none; visibility: hidden;"></a>
  </head>
 
  
