--- a/projects/timetwistpop/index.html
+++ b/projects/timetwistpop/index.html
@@ -3,10 +3,13 @@
  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-<link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
- 
     <title>D00k &nbsp;• &nbsp;  Time Twist Pop </title>
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
+    <meta property="og:image" content="/img/projects/timetwistpop02.jpg" />
+    <meta property="og:description" 
+  content="A simple, vibrant watchface for the colour models of the Pebble watch family." />
+    <a rel="me" href="https://post.lurk.org/@dook" style="display: none; visibility: hidden;"></a>
  </head>
 
    
