--- a/about/manga/favourites/index.html
+++ b/about/manga/favourites/index.html
@@ -3,10 +3,13 @@
  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-<link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
- 
     <title>D00k &nbsp;• &nbsp;  Favourites </title>
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
+    <meta property="og:image" content="/img/about/manga01.jpg" />
+    <meta property="og:description" 
+  content="Manga lists, what I&#39;m reading, what I&#39;ve read and what&#39;s my favourites." />
+    <a rel="me" href="https://post.lurk.org/@dook" style="display: none; visibility: hidden;"></a>
  </head>
 
  
