--- a/gallery/experiments/index.html
+++ b/gallery/experiments/index.html
@@ -3,11 +3,14 @@
  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>D00k &nbsp;• &nbsp;  Experiments </title>
     <link rel="alternate" type="application/rss+xml" href="https://d00k.net/gallery/experiments/index.xml" title="D00k" />
     <link rel="stylesheet" href="/css/style.css">
-<link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
- 
-    <title>D00k &nbsp;• &nbsp;  Experiments </title>
+    <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
+    <meta property="og:image" content="/img/gallery/light/LI03.jpg" />
+    <meta property="og:description" 
+  content="Small collection of various experiments with light and photographic techniques." />
+    <a rel="me" href="https://post.lurk.org/@dook" style="display: none; visibility: hidden;"></a>
  </head>
 
  
