--- a/journal/web-optimisations/index.html
+++ b/journal/web-optimisations/index.html
@@ -3,10 +3,13 @@
  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-<link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
- 
     <title>D00k &nbsp;• &nbsp;  Extreme Web Optimizations, without Compromising Style </title>
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
+    <meta property="og:image" content="" />
+    <meta property="og:description" 
+  content="A tear-down of the web optimizations I developed while putting this site together." />
+    <a rel="me" href="https://post.lurk.org/@dook" style="display: none; visibility: hidden;"></a>
  </head>
 
  
