--- a/knowledge/ecovillage/index.html
+++ b/knowledge/ecovillage/index.html
@@ -3,10 +3,13 @@
  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-<link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
- 
     <title>D00k &nbsp;• &nbsp;  Ecovillages </title>
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
+    <meta property="og:image" content="/img/knowledge/ecovillage06.jpg" />
+    <meta property="og:description" 
+  content="Record of my visit around Cloughjordan Ecovillage." />
+    <a rel="me" href="https://post.lurk.org/@dook" style="display: none; visibility: hidden;"></a>
  </head>
 
   
