--- a/projects/virtual-gallery/index.html
+++ b/projects/virtual-gallery/index.html
@@ -3,10 +3,13 @@
  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-<link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
- 
     <title>D00k &nbsp;• &nbsp;  Virtual Gallery </title>
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
+    <meta property="og:image" content="/img/projects/virtual_gallery_1.jpg" />
+    <meta property="og:description" 
+  content="An online art exhibition that I hosted in the summer of 2020." />
+    <a rel="me" href="https://post.lurk.org/@dook" style="display: none; visibility: hidden;"></a>
  </head>
 
    
